fix align center wrapper_albums, bonus completo

--- a/milestone_2/css/style.css
+++ b/milestone_2/css/style.css
@@ -67,7 +67,6 @@ main {
     margin: 0 auto;
     padding: 10px 20px;
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
     gap: 30px;
 }
